Closed
Bug 53845
Opened 25 years ago
Closed 25 years ago
getVersion always returns null, breaks SmartUpdate site
Categories
(Core Graveyard :: Installer: XPInstall Engine, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: depman1, Assigned: dveditz)
Details
(Whiteboard: [nsbeta3++][rtm+])
Attachments
(1 file)
|
723 bytes,
patch
|
Details | Diff | Splinter Review |
also see 28996 which covers the APIs accepting reg parameters.
1. Go to http://jimbob/trigger3.html
2. Enter http://jimbob/jars/a_getversion_regNode.xpi in the URL field. Accepts
regNode as parameter input.
3. Trigger. Then OK.
4. Check logfile.
Result: null
Expected: version (1.1.1.1)
I'll also post another .xpi for compare version.
| Assignee | ||
Comment 1•25 years ago
|
||
This kills the SmartUpdate site.
| Reporter | ||
Comment 2•25 years ago
|
||
Created another archive for compareVersion. run a_compareversion_regNode.xpi
from http://jimbob/jars. It's returning the expected results, but still not sure
it's working correctly given that getVersion returns null.
here's the log file:
-------------------------------------------------------------------------------
http://jimbob/jars/a_compareversion_regNode.xpi -- 09/25/2000 15:14:53
-------------------------------------------------------------------------------
Acceptance: a_compareversion_regNode
------------------------------------
** addFile returns = 0
[1/1] Installing: C:\Program Files\Netscape\M18\0922\Netscape
6\smrtupdt2.txt
Install completed successfully
**
test for-4
----------
** CompareVersion should return -4 = -4
Install completed successfully
**
test for-3
----------
** CompareVersion should return -3 = -3
Install completed successfully
**
test for-2
----------
** CompareVersion should return -2 = -2
Install completed successfully
**
test for-1
----------
** CompareVersion should return -1 = -1
Install completed successfully
**
test for0
---------
** CompareVersion should return 0 = 0
Install completed successfully
**
test for1
---------
** CompareVersion should return 1 = 1
Install completed successfully
**
test for2
---------
** CompareVersion should return 2 = 2
Install completed successfully
**
test for3
---------
** CompareVersion should return 3 = 3
Install completed successfully
**
test for4
---------
** CompareVersion should return 4 = 4
Install completed successfully
Finished Installation 09/25/2000 15:14:54
QA Contact: jimmylee → depstein
| Assignee | ||
Comment 3•25 years ago
|
||
Changing summary, compareVersion appears to work. Unfortunately the SmartUpdate
site depends on getVersion() to detect when packages aren't installed at all (as
opposed to installed but needing update). compareVersion() can't really
distinguish the two cases easily.
Summary: getVersion & compareVersion returns null for regNode input. → getVersion always returns null, breaks SmartUpdate site
Whiteboard: [nsbeta3+] → [nsbeta3+][rtm+]
| Assignee | ||
Comment 4•25 years ago
|
||
| Assignee | ||
Comment 5•25 years ago
|
||
Attached patch that reverts getVersion() behavior to 4.x -- return any version
found in the registry without trying to determine if the file exists. We were
failing in the case of top-level "package" versions that don't have any
associated file. We should fix this the right way for RTM, which would only
involve a few more lines, but this should be safe enough to get into PR3.
Samir,Sean -- could you review this for me?
Comment 7•25 years ago
|
||
a=mscott
Comment 8•25 years ago
|
||
Marking nsbeta3- as I don't think we'd need to hold the beta for this.
Whiteboard: [nsbeta3+][rtm+] → [nsbeta3-][rtm+]
Comment 9•25 years ago
|
||
PDT agrees this is needed on branch, marking nsbeta3++, please checkin ASAP.
Whiteboard: [nsbeta3-][rtm+] → [nsbeta3++][rtm+]
| Assignee | ||
Comment 10•25 years ago
|
||
Fix checked in
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 11•25 years ago
|
||
verified with Linux commercial build 2000-09-28-10-MN6, NT commercial build
2000-09-28-08-MN6, and the Mac Mozilla build 2000-09-28-12-MN6. Awaiting the Mac
commercial build to complete the cross-platform verification.
| Reporter | ||
Comment 12•25 years ago
|
||
Verified on Mac Commercial build 2000-09-28-12-MN6. Adding vtrunk to status
whiteboard field, will verify against trunk builds later.
Status: RESOLVED → VERIFIED
Whiteboard: [nsbeta3++][rtm+] → [nsbeta3++][rtm+][vtrunk]
| Reporter | ||
Comment 13•25 years ago
|
||
verified in 2000-10-02-08-M18 Trunk builds (Linux and NT), and the
2000-10-02-11-M18 Trunk build on Mac.
Whiteboard: [nsbeta3++][rtm+][vtrunk] → [nsbeta3++][rtm+]
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•