Bug 53845 make InstallTrigger.getVersion() work for SmartUpdate site. r=ssu,sr=mscott,a=pdt nsbeta3++